add button favourite

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,10 +1,11 @@
-.container {
+.container-card {
   display: flex;
   flex-basis: 23%;
-  margin: 15px;
+  margin: 5px;
   border: solid 2px #3a3a3a;
   border-radius: 5px;
-  justify-content: space-between;
+  flex-direction: column;
+  width: 25%;
 }
 
 .cardBody {
@@ -12,15 +13,56 @@
 }
 
 .title {
-  font-size: 15px;
+  font-size: 20px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .description {
-  font-size: 12px;
+  font-size: 15px;
   text-align: center;
+  height: 100px;
 }
 
 .image {
   width: 100%;
+  border-radius: 50%;
+  border: 1px solid red;
+}
+
+.link {
+  padding: 10px;
+}
+
+.rank-text {
+  font-size: 35px;
+  text-align: center;
+}
+
+.date-text {
+  text-align: center;
+}
+
+.button-card {
+  width: 100%;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  border-radius: 13px;
+  color: rgb(29, 8, 8);
+  background-color: rgb(72, 240, 203);
+  font-weight: 500;
+  transition: 0.3s linear;
+}
+
+.button-card:hover {
+  background-color: rgb(125, 240, 72);
+}
+
+.count {
+  text-align: center;
+  color: rgb(133, 115, 14);
+}
+
+.default {
+  margin-top: 25px;
 }
