--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,12 +1,12 @@
 .container-header {
-  background-color: black;
-  padding: 10px;
+  background-color: rgb(72, 240, 203);
+  padding: 30px;
   width: 100%;
   margin-bottom: 15px;
 }
 
 .title-header {
-  color: white;
-  font-size: 18px;
+  color: rgb(29, 8, 8);
+  font-size: 28px;
   text-align: center;
 }
