--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,6 @@
 .container-card {
   display: flex;
-  flex-basis: 23%;
+  flex-basis: 30%;
   margin: 5px;
   border: solid 2px #3a3a3a;
   border-radius: 5px;
@@ -18,28 +18,17 @@
   text-transform: uppercase;
 }
 
-.description {
-  font-size: 15px;
-  text-align: center;
-  height: 100px;
-}
+
 
 .image {
-  width: 100%;
+  width: 95%;
   border-radius: 50%;
   border: 1px solid red;
-}
-
-.link {
-  padding: 10px;
+  margin: 5px auto;
 }
 
 .rank-text {
   font-size: 35px;
-  text-align: center;
-}
-
-.date-text {
   text-align: center;
 }
 
@@ -65,4 +54,10 @@
 
 .default {
   margin-top: 25px;
+}
+
+.link-about {
+  padding: 5px 40%;
+  color: #000;
+  text-decoration: none;
 }
