--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,3 +10,10 @@
   font-size: 28px;
   text-align: center;
 }
+
+.sort {
+  width: 200px;
+  background-color: rgb(223, 250, 126);
+  display: block;
+  margin: 0 auto;
+}
